# phb

./: .gitignore  .purescript-paths  Gruntfile.js  Gulpfile.js  MODULES.md  README.md  bower.json  devel.cfg  devel.private.cfg.sample  migrate.sql  package.json  phb.cabal
client/: bower.json  ember-cli-build.js  package.json
client/app/: index.html  router.js
client/app/adapters/: application.js
client/app/components/: nav-dropdown.js
client/app/controllers/: login.js
client/app/controllers/customers/customer/: edit.js
client/app/routes/: application.js  customers.js  login.hs
client/app/routes/customers/: index.js
client/app/routes/customers/customer/: edit.js
client/app/styles/: app.css
client/app/templates/: application.hbs  customers.hbs  login.hbs
client/app/templates/components/: nav-dropdown.hbs
client/app/templates/customers/customer/: edit.hbs
client/config/: environment.js  head-content.js
client/server/proxies/: api.js
hs/: Main.hs  Site.hs
hs/Phb/: Auth.hs  Dates.hs  Db.hs  Mail.hs  Main.hs  Util.hs
hs/Phb/Db/: Action.hs  Backlog.hs  Enums.hs  Esqueleto.hs  Event.hs  Heartbeat.hs  Internal.hs  Person.hs  PersonLogin.hs  Project.hs  PublicHoliday.hs  Standup.hs  Success.hs  Task.hs  TimeLog.hs
hs/Phb/Types/: Backlog.hs  Event.hs  Heartbeat.hs  Project.hs  Standup.hs  Task.hs  TimeLog.hs  TimeSummary.hs
hs/Site/: Backlog.hs  Customer.hs  Event.hs  Heartbeat.hs  Internal.hs  Person.hs  Project.hs  Standup.hs  Task.hs  TimeGraph.hs  TimeLog.hs  WorkCategory.hs
hs/Snap/Snaplet/: Persistent.hs
osx/: com.benkolera.phb.plist  launchctl-reload
purs/: ChartJs.purs  Phb.purs  PleaseJs.purs  TinyColor.purs
server/: Phb.hs  phb.cabal  phb.refresh.sql  phb.schema.sql
server/Phb/: Api.hs  Db.hs  Servant.hs  Server.hs  Types.hs
server/Phb/Api/: Customer.hs  Internal.hs
server/Phb/Db/: Customer.hs  Internal.hs
server/Phb/Server/: Auth.hs  Cookie.hs  Env.hs
server/Phb/Types/: Customer.hs  Login.hs  Record.hs  RecordType.hs  User.hs
server/Phb/Types/Customer/: Create.hs  Read.hs  Update.hs
snaplets/heist/templates/: _flash.tpl  _time_graph.tpl  base.tpl  base_unauthed.tpl  index.tpl  login.tpl  standup.tpl
snaplets/heist/templates/backlog/: _all.tpl  _form.tpl  all.tpl  create.tpl  edit.tpl
snaplets/heist/templates/customers/: _all.tpl  _form.tpl  all.tpl  create.tpl  edit.tpl
snaplets/heist/templates/events/: _all.tpl  _form.tpl  all.tpl  create.tpl  edit.tpl
snaplets/heist/templates/heartbeats/: _all.tpl  _form.tpl  _view.tpl  all.tpl  create.tpl  edit.tpl  view.tpl
snaplets/heist/templates/people/: _all.tpl  _form.tpl  all.tpl  create.tpl  edit.tpl
snaplets/heist/templates/projects/: _all.tpl  _form.tpl  all.tpl  create.tpl  edit.tpl
snaplets/heist/templates/task/: _all.tpl  all.tpl
snaplets/heist/templates/tasks/: _all.tpl  _form.tpl  all.tpl  create.tpl  edit.tpl
snaplets/heist/templates/time_logs/: _all.tpl  _form.tpl  _form_many.tpl  all.tpl  by_day.tpl  by_user.tpl  create.tpl  edit.tpl  list.tpl  mine.tpl
snaplets/heist/templates/work_categories/: _all.tpl  _form.tpl  all.tpl  create.tpl  edit.tpl
src/: Main.hs  Site.hs
src/Phb/: Auth.hs  Db.hs  Ldap.hs  Mail.hs  Types.hs  Util.hs
src/Phb/Db/: Backlog.hs  Customer.hs  Enums.hs  Esqueleto.hs  Internal.hs  PersonLogin.hs  WorkCategory.hs
src/Phb/Output/: Email.hs
src/Phb/Types/: Action.hs  Backlog.hs  Project.hs  Success.hs  TimeLog.hs
src/Site/: Action.hs  Auth.hs  Backlog.hs  Customer.hs  Event.hs  Heartbeat.hs  Internal.hs  Person.hs  Project.hs  TimeLog.hs  WorkCategory.hs
src/Snap/Snaplet/: Persistent.hs
static/css/: phb.css
static/js/: digestive-functors-heist.js  phb.js
