name:                phb
version:             0.2.0.0
synopsis:            A portal for tracking and communicating pointy haired boss things.
-- description:
license:             MIT
license-file:        LICENSE
author:              Ben Kolera
maintainer:          ben.kolera@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable phb
  main-is: Phb.hs
  build-depends:
      aeson             >= 0.8
    , base              >= 4.7 && < 5
    , bytestring
    , configurator      == 0.3.*
    , http-types
    , opaleye           == 0.3.*
    , postgresql-simple == 0.4.*
    , servant           == 0.4.*
    , servant-server    == 0.4.*
    , text
    , wai
    , warp
  hs-source-dirs:   hs
  default-language: Haskell2010
