name:                phb
version:             0.2.0.0
synopsis:            A portal for tracking and communicating pointy haired boss things.
-- description:
license:             MIT
license-file:        LICENSE
author:              Ben Kolera
maintainer:          ben.kolera@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable phb
  main-is: Phb.hs
  build-depends:
      aeson               >= 0.8
    , base                >= 4.7 && < 5
    , blaze-builder 
    , bytestring
    , configurator        == 0.3.*
    , cookie
    , clientsession
    , http-types
    , either
    , errors
    , lens                == 4.12
    , mtl                 == 2.2.*
    , opaleye             == 0.3.*
    , postgresql-simple   == 0.4.*
    , product-profunctors 
    , servant             == 0.4.*
    , servant-server      == 0.4.*
    , transformers
    , text
    , time                == 1.5.*
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
